# smartmeet-matrix

./: LICENSE  README.md
backend-fastapi/: database_engine.py  main.py  pyproject.toml  requirements.txt
backend-fastapi/model/: meeting.py  topic.py  user.py
backend-fastapi/service/: chromadb_service.py  meeting_service.py  topic_service.py  user_service.py
backend-fastapi/tools/: forbidden_words.py
backend-springboot/: pom.xml
docs/: run_backend_fastapi.md
frontend-app/: .gitignore  App.vue  main.js  manifest.json  package-lock.json  package.json  pages.json  uni.scss  vue.config.js
frontend-app/api/: attend_meeting.js  comments.js  meeting.js  meeting_material.js  meetings.js  message.js  topics.js  user.js
frontend-app/components/: BottomNavBar.vue
frontend-app/config/: config.js
frontend-app/mixins/: index.js  play.js  publish.js
frontend-app/pages/: KeyCenter.js  getToken.js  login.vue
frontend-app/pages/add_meeting/: add_meeting.vue  add_meeting_by_id.vue
frontend-app/pages/audio_to_text/: audio_to_text.vue
frontend-app/pages/home/: home.vue
frontend-app/pages/index/: agent.vue
frontend-app/pages/meeting/: attendMeeting.vue  meeting-config.nvue  meeting-detail.nvue  meetingMaterials.vue
frontend-app/pages/meeting_detail/: add_comment.vue  commenter_info.vue  meeting_detail.vue  (+1 more)
frontend-app/static/: daohang.html
frontend-app/stores/: token.js  userInfo.js
frontend-app/utils/: request.js  sign.js
frontend-web/: README.md  index.html  package-lock.json  package.json  vite.config.js
frontend-web/src/: main.js
(+136 files in other folders)
