[project]
name = "backend-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncmy>=0.2.11",
    "chromadb>=1.5.2",
    "cryptography>=46.0.5",
    "fastapi>=0.135.1",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.47",
]
